[gd_scene load_steps=5 format=3 uid="uid://dfbdc3h0pfho0"]

[ext_resource type="Script" uid="uid://dix5s0tmtvy2o" path="res://scenes/entities/item/item.gd" id="1_b3ogd"]
[ext_resource type="FontFile" uid="uid://ce2mtvx6mg0hp" path="res://assets/fonts/Precise-M.ttf" id="2_7wmp6"]
[ext_resource type="FontFile" uid="uid://bftq06m6bb7rx" path="res://assets/fonts/Precise-M Bold.ttf" id="3_b5ty2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_b3ogd"]

[node name="Item" type="Node2D"]
script = ExtResource("1_b3ogd")

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
mouse_filter = 1

[node name="ItemLabel" type="RichTextLabel" parent="."]
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = -20.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("2_7wmp6")
theme_override_fonts/bold_font = ExtResource("3_b5ty2")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_b3ogd")

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
